Fixes cities size when name of city is too large and avoid making bigger city card Fixes clean userCities when changing user.

--- a/src/app/home/cities/city-card/city-card.component.sass
+++ b/src/app/home/cities/city-card/city-card.component.sass
@@ -55,6 +55,11 @@
         text-transform: uppercase
         font-weight: bold
         font-size: 1.15rem
+        white-space: nowrap
+        text-overflow: ellipsis
+        width: 100%
+        text-align: center
+        overflow: hidden
         @include md-screen
             font-size: 2rem
     
